style: Fix some more low severity code issues